crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_i64.ts_function_FunctionDeclarationID(25).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_15
block_15 -> [block_25, ]
block_25 -> [block_26, ]
block_26 -> [block_28, ]
block_28 -> [block_29, ]
