crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if.ts_function_FunctionDeclarationID(44).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_30
