crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else.ts_function_FunctionDeclarationID(18).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_15
block_15 -> [block_21, block_24, ]
block_21 -> [block_23, ]
block_24 -> [block_23, ]
