crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_borrow_in_both_branches.ts_function_FunctionDeclarationID(48).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_32
block_32 -> [block_38, block_41, ]
block_38 -> [block_40, ]
block_41 -> [block_40, ]
